[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/ui/title_bg.png" type="Texture" id=1]
[ext_resource path="res://ui/title/Title.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/ui/button/move.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/ui/button/press.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/theme/main.theme" type="Theme" id=5]
[ext_resource path="res://assets/textures/ui/title.png" type="Texture" id=6]
[ext_resource path="res://shaders/bb.tres" type="Material" id=7]
[ext_resource path="res://assets/sfx/ui/button/back.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "enter"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ -20, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "exit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, -20 ]
}

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.305882, 0.419608, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -208.0
margin_top = -111.0
margin_right = 752.0
margin_bottom = 513.0
texture = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 181.0
margin_top = 58.0
margin_right = 321.0
margin_bottom = 93.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
material = ExtResource( 7 )
margin_left = 256.0
margin_top = 164.0
margin_right = 256.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Buttons"]
use_parent_material = true
margin_left = -59.0
margin_top = -28.0
margin_right = 59.0
margin_bottom = -14.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="Buttons"]
use_parent_material = true
margin_left = -59.0
margin_right = 59.0
margin_bottom = 14.0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Buttons"]
use_parent_material = true
margin_left = -59.0
margin_top = 28.0
margin_right = 59.0
margin_bottom = 42.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
use_parent_material = true
margin_left = -59.0
margin_top = 56.0
margin_right = 59.0
margin_bottom = 70.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Back" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 1 )
anims/exit = SubResource( 2 )

[connection signal="button_down" from="Buttons/Play" to="." method="_on_Play_button_down"]
[connection signal="focus_entered" from="Buttons/Play" to="." method="_on_Play_focus_entered"]
[connection signal="mouse_entered" from="Buttons/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="focus_entered" from="Buttons/Controls" to="." method="_on_Controls_focus_entered"]
[connection signal="mouse_entered" from="Buttons/Controls" to="." method="_on_Controls_mouse_entered"]
[connection signal="focus_entered" from="Buttons/Settings" to="." method="_on_Settings_focus_entered"]
[connection signal="mouse_entered" from="Buttons/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_Quit_button_down"]
[connection signal="focus_entered" from="Buttons/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_Quit_mouse_entered"]
